fix: don’t enforce scrollbar, align TOC with heading
Closes DX-114

--- a/css/default.css
+++ b/css/default.css
@@ -1230,12 +1230,11 @@ div#defaultsidebar .mysidebar .sidebarbuttoncontainer {
 }
 
 #anchorlist {
-    margin-top: 90px;
+    margin-top: 70px;
     text-align: left;
     position: fixed;
     max-height: 360px;
     overflow-wrap: anywhere;
-    overflow-y: scroll;
 }
 
 #anchorlist a {
